--- a/Drakensoul.vcxproj
+++ b/Drakensoul.vcxproj
@@ -145,28 +145,38 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\Components\ActorComponents.ixx" />
-    <ClCompile Include="src\Components\GeometryComponents.ixx" />
-    <ClCompile Include="src\Components\GraphicsComponents.ixx" />
-    <ClCompile Include="src\Components\WorldComponents.ixx" />
+    <ClCompile Include="src\Components\ActorComponent.ixx" />
+    <ClCompile Include="src\Components\HeightmapComponent.ixx" />
+    <ClCompile Include="src\Components\MeshComponent.ixx" />
+    <ClCompile Include="src\Components\PlayerComponent.ixx" />
+    <ClCompile Include="src\Components\PositionComponent.ixx" />
+    <ClCompile Include="src\Components\RenderableComponent.ixx" />
+    <ClCompile Include="src\Components\TerrainMeshComponent.ixx" />
+    <ClCompile Include="src\Components\TileGridComponent.ixx" />
+    <ClCompile Include="src\Components\TransformComponent.ixx" />
     <ClCompile Include="src\Core\ECS\ComponentManager.ixx" />
     <ClCompile Include="src\Core\ECS\Engine.ixx" />
     <ClCompile Include="src\Core\ECS\EntityManager.ixx" />
     <ClCompile Include="src\Core\ECS\EventManager.ixx" />
     <ClCompile Include="src\Core\ECS\SystemManager.ixx" />
+    <ClCompile Include="src\Events\CameraEvents.ixx" />
     <ClCompile Include="src\Events\InputEvents.ixx" />
     <ClCompile Include="src\Events\MovementEvent.ixx" />
     <ClCompile Include="src\Game\Game.cpp" />
     <ClCompile Include="src\Game\Game.ixx" />
-    <ClCompile Include="src\Game\GameContext.ixx" />
     <ClCompile Include="src\Game\World.ixx" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Rendering\Model\Model.ixx" />
+    <ClCompile Include="src\Rendering\Model\ModelManager.ixx" />
+    <ClCompile Include="src\Rendering\Shader\ShaderManager.ixx" />
     <ClCompile Include="src\Rendering\Window\Window.cpp" />
     <ClCompile Include="src\Rendering\Window\Window.ixx" />
     <ClCompile Include="src\Systems\InputSystem.ixx" />
     <ClCompile Include="src\Systems\MovementSystem.ixx" />
     <ClCompile Include="src\Systems\RenderingSystem.ixx" />
+    <ClCompile Include="src\Systems\TerrainRenderingSystem.ixx" />
     <ClCompile Include="src\Utils\Globals.ixx" />
+    <ClCompile Include="src\Utils\Startup.ixx" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\Effects\blood.bmp">
@@ -176,9 +186,14 @@
     <Image Include="Assets\Textures\grass.bmp">
       <DeploymentContent>true</DeploymentContent>
     </Image>
+    <Image Include="Assets\Textures\grass_tile.bmp" />
     <Image Include="Assets\Textures\wall.bmp">
       <DeploymentContent>true</DeploymentContent>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\Rendering\Shader\Shaders\FragmentShader.glsl" />
+    <None Include="src\Rendering\Shader\Shaders\VertexShader.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
