--- a/Drakensoul.vcxproj.filters
+++ b/Drakensoul.vcxproj.filters
@@ -130,7 +130,7 @@
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\Rendering\Shader\Shaders\VertexShader.glsl" />
-    <None Include="src\Rendering\Shader\Shaders\FragmentShader.glsl" />
+    <None Include="src\Rendering\Shader\Shaders\TerrainVertexShader.glsl" />
+    <None Include="src\Rendering\Shader\Shaders\TerrainFragmentShader.glsl" />
   </ItemGroup>
 </Project>
