--- a/Drakensoul.vcxproj.filters
+++ b/Drakensoul.vcxproj.filters
@@ -111,6 +111,15 @@
     <ClCompile Include="src\Systems\TerrainRenderingSystem.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Components\CameraComponent.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Systems\CameraSystem.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Events\PlayerMovementEvent.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\Textures\wall.bmp">
