Update and rename Drakensoul.vcxproj to ECS_Renderer.vcxproj

--- a/ECS_Renderer.vcxproj
+++ b/ECS_Renderer.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{bca6c5ba-9921-400c-b168-781a8b125212}</ProjectGuid>
-    <RootNamespace>Drakensoul</RootNamespace>
+    <RootNamespace>ECS_Renderer</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
